buddy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buddy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: buddy-backend
            port:
              number: 2520
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: buddy-backend
            port:
              number: 2520
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buddy-frontend
            port:
              number: 80
